hide the cookie message by default to avoid page-load flicker

--- a/cms/medexCms/staticfiles/scss/partials/_cookies.scss
+++ b/cms/medexCms/staticfiles/scss/partials/_cookies.scss
@@ -7,6 +7,7 @@
   background-color: $white;
   font-size: 1rem;
   line-height: 1.5;
+  display: none;
 }
 
 .js_enabled #cookie-message {
